feature(Auth): add profile deletion API
