# internal/transport/http/handler/v1/auth/oauth.go
@@ -7,6 +7,7 @@ import (
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/helpers/request"
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/helpers/response"
 	api "github.com/mephistolie/chefbook-backend-auth/api/proto/implementation/v1"
+	"time"
 )
 
 // RequestGoogleOAuth Swagger Documentation
@@ -62,10 +63,17 @@ func (h *Handler) SignInGoogle(c *gin.Context) {
 		return
 	}
 
+	var profileDeletionTimestamp *time.Time
+	if res.ProfileDeletionTimestamp != nil {
+		timestamp := res.ProfileDeletionTimestamp.AsTime()
+		profileDeletionTimestamp = &timestamp
+	}
+
 	response.Success(c, response_body.Tokens{
-		Access:    res.AccessToken,
-		Refresh:   res.RefreshToken,
-		ExpiresAt: res.ExpirationTimestamp.AsTime(),
+		Access:            res.AccessToken,
+		Refresh:           res.RefreshToken,
+		ExpiresAt:         res.ExpirationTimestamp.AsTime(),
+		ProfileDeletingAt: profileDeletionTimestamp,
 	})
 }
 
@@ -194,10 +202,17 @@ func (h *Handler) SignInVk(c *gin.Context) {
 		return
 	}
 
+	var profileDeletionTimestamp *time.Time
+	if res.ProfileDeletionTimestamp != nil {
+		timestamp := res.ProfileDeletionTimestamp.AsTime()
+		profileDeletionTimestamp = &timestamp
+	}
+
 	response.Success(c, response_body.Tokens{
-		Access:    res.AccessToken,
-		Refresh:   res.RefreshToken,
-		ExpiresAt: res.ExpirationTimestamp.AsTime(),
+		Access:            res.AccessToken,
+		Refresh:           res.RefreshToken,
+		ExpiresAt:         res.ExpirationTimestamp.AsTime(),
+		ProfileDeletingAt: profileDeletionTimestamp,
 	})
 }
 
