# internal/transport/http/handler/v1/profile/dto/request_body/auth.go
@@ -1,0 +1,6 @@
+package request_body
+
+type DeleteProfile struct {
+	Password       string `json:"password"`
+	WithSharedData bool   `json:"withSharedData,omitempty"`
+}
