# internal/transport/http/handler/v1/profile/dto/response_body/auth.go
@@ -1,0 +1,12 @@
+package response_body
+
+import "time"
+
+type ProfileDeletionStatus struct {
+	DeletionTimestamp *time.Time `json:"deletionTimestamp,omitempty"`
+	Deleted           bool       `json:"deleted,omitempty"`
+}
+
+type DeleteProfile struct {
+	DeletionTimestamp time.Time `json:"deletionTimestamp"`
+}
