# internal/transport/http/router/v1/profile.go
@@ -10,12 +10,16 @@ func (r *Router) initProfileRoutes(api *gin.RouterGroup) {
 	profileGroup := api.Group("/profile", r.authMiddleware.AuthorizeUser)
 	{
 		profileGroup.GET("", r.handler.Profile.GetProfile)
-		profileGroup.DELETE("", r.handler.Profile.DeleteProfile)
 		profileGroup.PUT("/name", r.handler.Profile.SetName)
 		profileGroup.PUT("/description", r.handler.Profile.SetDescription)
 		profileGroup.POST("/avatar", r.handler.Profile.GenerateAvatarUploadLink)
 		profileGroup.PUT("/avatar", r.handler.Profile.ConfirmAvatarUploading)
 		profileGroup.DELETE("/avatar", r.handler.Profile.DeleteAvatar)
+	}
+	{
+		api.GET("profile/delete", r.authMiddleware.AuthorizeDeletedUser, r.handler.Profile.GetProfileDeletionStatus)
+		api.POST("profile/delete", r.authMiddleware.AuthorizeDeletedUser, r.handler.Profile.DeleteProfile)
+		api.DELETE("profile/delete", r.authMiddleware.AuthorizeDeletedUser, r.handler.Profile.CancelProfileDeletion)
 	}
 
 	profilesGroup := api.Group("/profiles", r.authMiddleware.AuthorizeUser)
